2011-01-26  Frank Lanitz  <frank@frank.uvena.de>

 * Initial Entry. New plugin: HTMLTable.